Fix alignment with reference image

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2.5rem 1fr 2.5rem 2.5rem .75rem;
+  grid-template-rows: 2.5rem 1fr 3rem 3rem 0;
   gap: .75rem;
 }
 
@@ -42,7 +42,7 @@ header img {
 }
 
 header h2 {
-  margin: 1rem 1.5rem;
+  margin: 0 1.5rem 1rem;
   font-weight: normal;
   font-style: italic;
   color: #fff;
